AX: nested role="presentation" elements break role="tree" behavior https://bugs.webkit.org/show_bug.cgi?id=227906 <rdar://80520596>

Reviewed by Andres Gonzalez.

Trees can have arbitrary levels of nesting of role="presentational" elements.

* LayoutTests/accessibility/mac/nested-tree-presentation-roles-expected.txt: Added.
* LayoutTests/accessibility/mac/nested-tree-presentation-roles.html: Added.
* Source/WebCore/accessibility/AccessibilityTree.cpp:
(WebCore::AccessibilityTree::isTreeValid const):
(WebCore::AccessibilityTree::nodeHasTreeItemChild const): Deleted.
* Source/WebCore/accessibility/AccessibilityTree.h:

Canonical link: https://commits.webkit.org/258435@main